# SagaEngine

./: .gitignore  CMakeLists.txt  README.md  ]  imgui.ini  main.cpp
Application/General/Components/: playerInput.h  thirdPersonCamera.h
Application/General/Systems/: playerInputSystem.cpp  playerInputSystem.h  thirdPersonCameraSystem.cpp  thirdPersonCameraSystem.h
Application/Platformer/: app.cpp  app.h  config.h
Application/Platformer/Behaviours/: computePathTowards.cpp  computePathTowards.h  loadPlayerPosition.cpp  loadPlayerPosition.h  walkPath.cpp  walkPath.h
Application/Platformer/Components/: friendController.h  playerController.h  simpleTestAI.h
Application/Platformer/Systems/: friendControllerSystem.cpp  friendControllerSystem.h  playerControllerSystem.cpp  playerControllerSystem.h  simpleTestAISystem.cpp  simpleTestAISystem.h
Application/StarCollectionGame/: config.h  plan.md  starApp.cpp  starApp.h
Application/StarCollectionGame/ECS/: editor.cpp  editor.h
Application/StarCollectionGame/ECS/player/: player.cpp  player.h
Application/StarCollectionGame/ECS/star/: star.cpp  star.h
Application/StarCollectionGame/ECS/terrain/: terrain.h
Application/StarCollectionGame/builders/: lighting.cpp  lighting.h  particleEffect.cpp  particleEffects.h  player.cpp  player.h  star.cpp  star.h  terrain.cpp  terrain.h
Blender/: noisyPlane.blend  noisyPlane.blend1  noisyPlane.mtl
Engine/: Doxyfile  README.md  defines.h  saga.h
Engine/Audio/: _import.h  audioEngine.cpp  audioEngine.h  audioEventInstance.cpp  audioEventInstance.h
Engine/Components/: _import.h  audioEmitter.h  audioemitter.cpp  camera.cpp  camera.h  collider.h  collisionSystemData.h  drawSystemData.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  rigidbbody.h  transform.cpp  transform.h
Engine/Components/BehaviourTree/: behaviourtree.cpp  behaviourtree.h  blackboard.h  compositenodes.cpp  compositenodes.h  conditionalNodes.h  conditionalnodes.cpp  decoratornodes.cpp  decoratornodes.h  tasknodes.cpp  tasknodes.h
Engine/Components/Particles/: particleCollection.cpp  particleCollection.h  particleEmitter.cpp  particleEmitter.h
Engine/Components/navigation/: navMeshData.h
Engine/Constants/: colorthemes.h
Engine/Datastructures/: _import.h  eventmap.h  typemap.h
Engine/Datastructures/Accelerant/: boundingBox.cpp  boundingBox.h  bvh.cpp  bvh.h  uniformGrid.h  uniformGrid.inl
Engine/Datastructures/Navigation/: navMesh.cpp  navMesh.h
Engine/Entity/: _import.h  entity.h
Engine/Gameworld/: _import.h  componentContainer.h  componentContainer.inl  componentGroup.h  componentGroup.inl  componentReference.h  gameworld.cpp  gameworld.h  gameworld.inl  signature.h
Engine/Graphics/: blit.cpp  blit.h  circleBlur.cpp  circleBlur.h  depthOfField.cpp  depthOfField.h  fog.cpp  fog.h  frustum.h  gaussianBlur.cpp  gaussianBlur.h  maxFilter.cpp  maxFilter.h  separableKernel.cpp  separableKernel.h  skybox.cpp  skybox.h
Engine/MetaSystems/: _import.h  physics.cpp  physics.h
Engine/Systems/: _import.h  aiSystem.cpp  aiSystem.h  audioSystem.cpp  audioSystem.h  collisionSystem.cpp  collisionSystem.h  collisionSystemHelper.cpp  collisionSystemOptimizationDynamic.cpp  collisionSystemOptimizationDynamic.h  collisionSystemOptimizationDynamic.inl  collisionSystemOptimizationStatic.cpp  collisionSystemOptimizationStatic.h  drawSystem.cpp  drawSystem.h  events.h  invokableSystemManager.cpp  invokableSystemManager.h  particleSystem.cpp  particleSystem.h  system.h  systemManager.cpp  systemManager.h  systemManager.inl
Engine/Systems/helpers/: collisionSystemHelper.cpp  collisionSystemHelper.h  collisionSystemOptimizationDynamic.cpp  collisionSystemOptimizationStatic.cpp  collisionSystemOptimizationStatic.h  postProcessing.cpp  postProcessing.h  shadowMap.cpp  shadowMap.h
Engine/Utils/: geometry.cpp  geometry.h  math.cpp  math.h  random.cpp  random.h  tupleHash.h
Engine/Utils/colors/: colorPalette.cpp  colorPalette.h
Engine/Utils/geometry/: box.cpp  box.h  circle.cpp  circle.h  cylinder.cpp  cylinder.h  ellipsoid.cpp  ellipsoid.h  geometry.h  line.cpp  line.h  triangle.cpp  triangle.h
Engine/Utils/graphics/: frustum.cpp  frustum.h
Engine/_Core/: _import.h  app.cpp  app.h  asserts.h  core.cpp  core.h  logger.cpp  logger.h  window.cpp  window.h
FMOD/Saga/.cache/: {1db8da4f-7b95-4d18-9a67-4302066955ad}.pdc  {3b4dfbd3-08aa-4aef-a174-4f4bda004701}.pdc  {453e9382-b25e-480e-8e84-d9e41b24de0f}.pdc  {6be8cd55-1129-40af-9421-14904d2402e2}.pdc  {7a589688-b7d3-4f81-a856-b94cf02ba738}.pdc  {948be194-c22d-4abb-ac9b-d2401522dfd2}.pdc  {b4882822-9e5b-4eaf-8f09-83d660605008}.pdc  {e7a3b0b2-2928-4853-8fea-e1f7020a64b5}.pdc  {f8bff6fe-9818-497a-808f-d6958c6f41f5}.pdc
FMOD/Saga/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
FMOD/Saga/Metadata/AudioFile/: {1db8da4f-7b95-4d18-9a67-4302066955ad}.xml  {3b4dfbd3-08aa-4aef-a174-4f4bda004701}.xml  {453e9382-b25e-480e-8e84-d9e41b24de0f}.xml  {6be8cd55-1129-40af-9421-14904d2402e2}.xml  (+5 more)
Graphics/: camera.cpp  camera.h  cubemap.cpp  cubemap.h  debug.h  font.cpp  font.h  fullscreenquad.cpp  fullscreenquad.h  global.h  graphics.cpp  graphics.h  light.cpp  light.h  material.cpp  material.h  modeltransform.cpp  modeltransform.h  shaderloader.h  shape.cpp  shape.h  shapedata.cpp  shapedata.h  textrenderer.cpp  textrenderer.h
Graphics/GLWrappers/: framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h  veo.cpp  veo.h
Resources/Shaders/: blit.frag  phong.frag  phong.vert  postprocessing.vert
Resources/Shaders/_includes/: depth.glsl  fog.glsl
Resources/Shaders/bloom/: blend.frag  brightExtractor.frag
Resources/Shaders/depthOfField/: dofCombine.frag  dofSplit.frag
Resources/Shaders/fog/: fog.frag
Resources/Shaders/particles/: particleTextured.frag  vertex.vert
Resources/Shaders/shadow/: shadowMap.frag  shadowMap.vert  shadowMapTest.frag  shadowMapTest.vert
Resources/Shaders/skybox/: skybox.frag  skybox.vert
Resources/Shaders/standard/: circleBlur.frag  gaussianBlur.frag  max.frag
(+32 files in other folders)
